tests/enum_from/compile_fail/container/missing_attribute.stderr
error: proc-macro derive panicked
 --> tests/enum_from/compile_fail/container/missing_attribute.rs:7:10
  |
7 | #[derive(EnumFrom)]
  |          ^^^^^^^^
  |
  = help: message: enum_from attribute with source enum names is required
